--- a/KeepSafe/AndroidManifest.xml
+++ b/KeepSafe/AndroidManifest.xml
@@ -4,8 +4,9 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="15" />
-
+<!-- <uses-sdk android:minSdkVersion="15" />  -->    
+    <uses-sdk android:minSdkVersion="10" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
