--- a/KeepSafe/AndroidManifest.xml
+++ b/KeepSafe/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" >
 
 <!-- <uses-sdk android:minSdkVersion="15" />  -->    
+<!-- <uses-sdk android:minSdkVersion="13" />  -->    
     <uses-sdk android:minSdkVersion="10" />
     
     <application
