--- a/KeepSafe/AndroidManifest.xml
+++ b/KeepSafe/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
 <!-- <uses-sdk android:minSdkVersion="15" />  -->    
 <!-- <uses-sdk android:minSdkVersion="13" />  -->    
-    <uses-sdk android:minSdkVersion="10" />
+	 <uses-sdk android:minSdkVersion="10" />    
+<!-- <uses-sdk android:minSdkVersion="7" />  -->
     
     <application
         android:icon="@drawable/ic_launcher"
