--- a/KeepSafe/AndroidManifest.xml
+++ b/KeepSafe/AndroidManifest.xml
@@ -9,6 +9,8 @@
 <!-- <uses-sdk android:minSdkVersion="10" /> -->    
  <uses-sdk android:minSdkVersion="7" />  
     
+ 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+ 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -24,6 +26,7 @@
         </activity>
         <activity android:name="Preferences"></activity>
         <activity android:name="SelfTest"></activity>
-        </application>
+        <activity android:name="ImpExp"></activity>
+    </application>
 
 </manifest>
