--- a/KeepSafe/AndroidManifest.xml
+++ b/KeepSafe/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kompetensum.keepsafe"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
+<!-- android:installLocation="auto"  > -->
 
 <!-- <uses-sdk android:minSdkVersion="15" />  -->    
 <!-- <uses-sdk android:minSdkVersion="13" />  -->    
@@ -13,7 +14,8 @@
  
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:allowBackup="true">
         <activity
             android:name=".KeepSafeActivity"
 			android:configChanges="orientation|keyboardHidden"            
