--- a/KeepSafe/AndroidManifest.xml
+++ b/KeepSafe/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.kompetensum.keepsafe"
     android:versionCode="1"
     android:versionName="1.0">
-<!-- android:installLocation="auto"  > -->
+	android:installLocation="auto">
 
 <!-- <uses-sdk android:minSdkVersion="15" />  -->    
 <!-- <uses-sdk android:minSdkVersion="13" />  -->    
